Steps funnel (#65)
